[project]
name = "distributed-rate-limiter-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "javets70", email = "javetsm70@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.2",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
distributed-rate-limiter-service = "distributed_rate_limiter_service:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
